<resources>
    <string name="app_name">miPA</string>

    <!-- Menu Items -->
    <string name="home">Inicio</string>
    <string name="blood_pressure">Presión Arterial</string>
    <string name="heart_rate">Frecuencia Cardiaca</string>
    <string name="reminders">Recordatorios</string>
    <string name="advice">Consejos</string>
    <string name="settings">Ajustes</string>

    <string name="steps">Pasos</string>
    <string name="measure">Medir</string>
    <string name="start">Iniciar</string>
    <string name="restart">Reiniciar</string>
    <string name="cancel">Cancelar</string>

</resources>
