<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.main.MainActivity">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_item_blood_pressue"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/blood_pressure"/>
        <item
            android:id="@+id/nav_item_reminders"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/reminders"/>
        <item
            android:id="@+id/nav_item_advice"
            android:icon="@drawable/ic_insert_emoticon_black_24dp"
            android:title="@string/advice"/>

        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
    </group>
</menu>