<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGray"
    tools:context="com.gmail.jorgegilcavazos.healthathon.features.home.HomeFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:layout_height="180dp"
            android:background="@color/white"
            android:layout_margin="5dp"
            app:contentPadding="15dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_pressure"
                android:textSize="20sp"
                android:textColor="@color/primaryText"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:background="@color/white"
            android:layout_margin="5dp"
            android:layout_columnWeight="1"
            app:contentPadding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_heart_rate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ritmo Cardiaco"
                    android:textSize="18sp"
                    android:textColor="@color/primaryText"/>

                <TextView
                    android:id="@+id/tv_heart_rate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_heart_rate_title"
                    android:text="70"
                    android:textColor="@color/primaryText"
                    android:textSize="40sp"/>

                <TextView
                    android:id="@+id/tv_heart_rate_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_heart_rate_value"
                    android:layout_below="@id/tv_heart_rate_title"
                    android:layout_alignBottom="@id/tv_heart_rate_value"
                    android:layout_marginStart="5dp"
                    android:text="BPM"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:gravity="center_vertical"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:background="@color/white"
            android:layout_margin="5dp"
            app:contentPadding="15dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="2"
            android:layout_row="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_reminder_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminders"
                    android:textSize="20sp"
                    android:textColor="@color/primaryText"/>


                <RelativeLayout
                    android:id="@+id/rl_reminder_item_1"
                    android:layout_below="@id/tv_reminder_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_reminder_item_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3 PM"
                        android:layout_marginRight="10dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_reminder_item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/tv_reminder_item_time"
                        android:text="Enalapril"
                        android:textSize="15sp"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_below="@id/rl_reminder_item_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_reminder_item_time_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5 PM"
                        android:layout_marginRight="10dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_reminder_item_name_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/tv_reminder_item_time_2"
                        android:text="Losartan"
                        android:textSize="15sp"/>

                </RelativeLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:background="@color/white"
            android:layout_margin="5dp"
            app:contentPadding="15dp"
            android:layout_gravity="fill">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_steps_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textSize="20sp"
                    android:textColor="@color/primaryText"/>

                <TextView
                    android:id="@+id/tv_steps_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_steps_title"
                    android:text="6490"
                    android:textSize="40sp"
                    android:textColor="@color/primaryText"/>

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="70dp"
                    android:layout_below="@id/tv_steps_value"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="180dp"
            android:background="@color/white"
            android:layout_margin="5dp"
            app:contentPadding="15dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advice"
                android:textSize="20sp"
                android:textColor="@color/primaryText"/>
        </android.support.v7.widget.CardView>

    </GridLayout>

</RelativeLayout>
